fixed a11y and ARIA

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <path d="M80.4769 24.1261C79.0293 22.8435 77.0085 22.1 74.715 21.3288C73.0808 20.7601 72.1804 20.4469 71.5802 19.8996C71.1064 19.4974 70.8951 19.0608 70.8951 18.4837C70.8951 17.2196 71.754 15.8688 74.1653 15.8688C75.804 15.8688 77.1761 16.5695 78.2436 17.9505L78.6674 18.4989L82.1837 14.023L81.8631 13.702C79.7126 11.5499 76.8788 10.4128 73.6679 10.4128C67.1896 10.4128 64.2897 14.6274 64.2897 18.8043C64.2897 21.0457 65.089 22.8535 66.6606 24.1749C68.0676 25.3809 69.7835 26.0566 71.4293 26.6081L71.6154 26.6698C73.0769 27.1529 74.5885 27.6529 75.4913 28.4609C76.1194 29.038 76.3993 29.6651 76.3993 30.4942C76.3993 32.3942 74.903 33.6712 72.676 33.6712C70.9156 33.6712 68.5975 32.8083 67.3711 30.3871L67.0503 29.7528L62.6797 33.7985L62.9374 34.1631C64.3319 36.1375 67.4784 39.4499 72.8833 39.4499C78.843 39.4499 83.0056 35.6183 83.0056 30.1326C83.0056 26.9949 81.629 25.1327 80.4769 24.1261" stroke="#80949F" stroke-width="0.5"/>
         </svg>
       </a>
-      <nav class="header__menu header__menu--before" aria-label="Главное меню" role="navigation">
+      <nav class="header__menu header__menu--before">
         <ul class="header__menu-list">
           <li class="header__menu-item header__item-repair" >
             <a class="header__menu-link link" href="/" title="Ремонтируемые устройства" aria-label="Ремонтируемые устройства">
@@ -104,25 +104,25 @@
           </li>
         </ul>
       </div>
-      <nav class="main__menu" aria-label="Центральное меню" role="navigation">
+      <nav class="main__menu">
         <ul class="main__menu-list">
           <li class="main__menu-item">
-            <a class="main__menu-link main__menu-link--active" href="/" aria-label="Ремонтируемые устройства">Ремонтируемые устройства</a>
+            <a class="main__menu-link main__menu-link--active" href="/">Ремонтируемые устройства</a>
           </li>
           <li class="main__menu-item">
-            <a class="main__menu-link" href="/" aria-label="Дополнительные услуги" >Дополнительные услуги</a>
+            <a class="main__menu-link" href="/">Дополнительные услуги</a>
           </li>
           <li class="main__menu-item">
-            <a class="main__menu-link" href="/" aria-label="Цены на услуги">Цены на услуги</a>
+            <a class="main__menu-link" href="/">Цены на услуги</a>
           </li>
           <li class="main__menu-item">
-            <a class="main__menu-link" href="/" aria-label="Специальные цены">Специальные цены</a>
+            <a class="main__menu-link" href="/">Специальные цены</a>
           </li>
           <li class="main__menu-item">
-            <a class="main__menu-link" href="/" aria-label="Адреса сервисных центров">Адреса сервисных центров</a>
+            <a class="main__menu-link" href="/">Адреса сервисных центров</a>
           </li>
           <li class="main__menu-item">
-            <a class="main__menu-link" href="/" aria-label="Отзывы">Отзывы</a>
+            <a class="main__menu-link" href="/">Отзывы</a>
           </li>
         </ul>
       </nav>
@@ -143,7 +143,6 @@
           class="main__button button main__button--before"
           type="button"
           value="read-more"
-          aria-label="Читать далее"
         >
           Читать далее
         </button>
