--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 <body>
   <header class="header">
     <div class="header__inner">
-      <button class="header__button button" type="button" value="menu" title="Открыть меню" aria-label="Открыть меню">
+      <button class="header__button" type="button" value="menu" title="Открыть меню" aria-label="Открыть меню">
         <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd" d="M0 1C0 0.447715 0.447715 0 1 0H17C17.5523 0 18 0.447715 18 1C18 1.55228 17.5523 2 17 2H1C0.447716 2 0 1.55228 0 1ZM0 8C0 7.44772 0.447715 7 1 7H9C9.55228 7 10 7.44772 10 8C10 8.55229 9.55229 9 9 9H1C0.447715 9 0 8.55229 0 8ZM1 14C0.447715 14 0 14.4477 0 15C0 15.5523 0.447716 16 1 16H13C13.5523 16 14 15.5523 14 15C14 14.4477 13.5523 14 13 14H1Z" fill="white"/>
         </svg>
       </button>
-      <a class="header__logo logo" href="/" aria-label="CPS – сервисный центр Dell">
+      <a class="header__logo" href="/" aria-label="CPS – сервисный центр Dell">
         <svg width="98" height="52" viewBox="0 0 98 52" fill="none" xmlns="http://www.w3.org/2000/svg" role="img">
           <title>CPS – сервисный центр Dell</title>
           <path fill-rule="evenodd" clip-rule="evenodd" d="M36.0942 0.25C35.542 0.25 35.0942 0.697715 35.0942 1.25V5.52495C35.0942 6.07724 35.542 6.52495 36.0942 6.52495H72.4212C82.5482 6.52495 90.5016 14.3216 90.5016 24.4144C90.5016 24.7 90.7331 24.9315 91.0187 24.9315H96.2809C96.5664 24.9315 96.7979 24.7 96.7979 24.4144C96.7979 10.9252 85.9559 0.25 72.4212 0.25H36.0942Z" fill="#6B7B84" stroke="#80949F" stroke-width="0.5"/>
@@ -40,7 +40,7 @@
       <nav class="header__menu header__menu--before">
         <ul class="header__menu-list">
           <li class="header__menu-item header__item--repair" >
-            <a class="header__menu-link link" href="/" title="Ремонтируемые устройства" aria-label="Ремонтируемые устройства">
+            <a class="header__menu-link" href="/" title="Ремонтируемые устройства" aria-label="Ремонтируемые устройства">
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M8.25807 13.4583L8.66685 13.0494L6.94998 11.3322L6.54121 11.7411L6.33682 11.5367C6.0098 11.1687 5.68278 10.9643 5.35575 11.0052C5.11049 11.0052 4.9061 11.1687 4.74259 11.414C4.49732 11.8229 4.61996 12.2726 4.66083 12.5588C4.66083 12.6406 4.70171 12.6815 4.70171 12.7632C4.70171 12.8859 4.70171 13.0494 4.41557 13.0903C4.00679 13.213 3.47538 13.3356 2.94397 13.6218C2.20817 14.0307 1.71764 14.3987 1.4315 14.7666C-0.0809772 16.7291 0.000778159 18.4055 0.000778159 18.4872C0.000778159 18.6099 0.0416558 18.6917 0.123411 18.7325L1.22711 19.8773C1.30886 19.9591 1.39062 20 1.47237 20C1.47237 20 1.51325 20 1.59501 20C2.00378 20 3.47538 19.9182 5.19224 18.569C5.56014 18.2828 5.92804 17.7922 6.33682 17.0562C6.62296 16.5656 6.78647 16.0341 6.86823 15.5844C6.94998 15.2982 7.07262 15.2982 7.19525 15.2982C7.23613 15.2982 7.31788 15.339 7.39964 15.339C7.56315 15.3799 7.72666 15.4208 7.93105 15.4208C8.13544 15.4208 8.33983 15.3799 8.54421 15.2573C8.78948 15.0937 8.95299 14.8893 8.99387 14.644C9.03475 14.3169 8.87123 13.9898 8.50334 13.7036L8.25807 13.4583Z" fill="white"/>
                 <path d="M16.884 4.87841L18.0188 4.32603C18.0609 4.28354 18.1449 4.24105 18.1869 4.19856L19.9101 1.86157C20.0362 1.69161 20.0362 1.43667 19.8681 1.3092L18.6913 0.119458C18.5652 -0.00801422 18.313 -0.0505049 18.1449 0.076967L15.8333 1.81908C15.7913 1.86157 15.7493 1.90406 15.7072 1.98905L15.1609 3.13629L11 7.21539L12.7652 9L16.884 4.87841Z" fill="white"/>
@@ -49,28 +49,28 @@
             </a>
           </li>
           <li class="header__menu-item header__item--search">
-            <a class="header__menu-link link" href="/" title="Поиск устройства" aria-label="Поиск устройства">
+            <a class="header__menu-link" href="/" title="Поиск устройства" aria-label="Поиск устройства">
               <svg width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M15 0C15.5523 4.11991e-06 16 0.447718 16 1V18.5C15.1716 18.5 14.5 19.1716 14.5 20H13.5C13.5 19.1716 12.8284 18.5 12 18.5C11.1716 18.5 10.5 19.1716 10.5 20H9.5C9.49995 19.1716 8.82839 18.5 8 18.5C7.1716 18.5 6.50005 19.1716 6.5 20H5.5C5.49995 19.1716 4.82839 18.5 4 18.5C3.1716 18.5 2.50005 19.1716 2.5 20H1.5C1.49995 19.1716 0.828395 18.5 0 18.5V1C6.44261e-08 0.447715 0.447715 0 1 0H15ZM7.85352 3.87988C4.94922 3.42 2.49541 5.82593 2.85938 8.71094C3.08944 10.5322 4.5279 12.0473 6.33008 12.3828C7.4706 12.5935 8.55341 12.3439 9.41602 11.7881L11.5254 13.8975C11.8993 14.2711 12.5131 14.2711 12.8965 13.8877C13.2701 13.5139 13.2701 12.9002 12.8965 12.5264L10.7871 10.4268C11.3238 9.5737 11.5825 8.54831 11.4004 7.43652C11.1032 5.644 9.65569 4.16745 7.85352 3.87988ZM7.05859 5.70605C8.35736 5.70605 9.41202 6.75984 9.41211 8.05859C9.41211 9.35742 8.35742 10.4121 7.05859 10.4121C5.75984 10.412 4.70605 9.35736 4.70605 8.05859C4.70614 6.7599 5.7599 5.70614 7.05859 5.70605Z" fill="white"/>
               </svg>
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link link" href="/" title="Заказать звонок" aria-label="Заказать звонок">
+            <a class="header__menu-link" href="/" title="Заказать звонок" aria-label="Заказать звонок">
               <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M1.76019 12.25L4.30019 11.96C4.91019 11.89 5.51019 12.1 5.94019 12.53L7.78019 14.37C10.6102 12.93 12.9302 10.62 14.3702 7.78L12.5202 5.93C12.0902 5.5 11.8802 4.9 11.9502 4.29L12.2402 1.77C12.3602 0.76 13.2102 0 14.2302 0H15.9602C17.0902 0 18.0302 0.94 17.9602 2.07C17.4302 10.61 10.6002 17.43 2.07019 17.96C0.940193 18.03 0.00019455 17.09 0.00019455 15.96V14.23C-0.00980568 13.22 0.750193 12.37 1.76019 12.25Z" fill="white"/>
               </svg>
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link link" href="/" title="Написать нам" aria-label="Написать нам">
+            <a class="header__menu-link" href="/" title="Написать нам" aria-label="Написать нам">
               <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M18 0H2C0.9 0 0.01 0.9 0.01 2L0 20L4 15H18C19.1 15 20 14.1 20 13V2C20 0.9 19.1 0 18 0ZM11 11H5C4.45 11 4 10.55 4 10C4 9.45 4.45 9 5 9H11C11.55 9 12 9.45 12 10C12 10.55 11.55 11 11 11ZM15 6H5C4.45 6 4 5.55 4 5C4 4.45 4.45 4 5 4H15C15.55 4 16 4.45 16 5C16 5.55 15.55 6 15 6Z" fill="white"/>
               </svg>
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link link" href="/" title="Профиль" aria-label="Профиль">
+            <a class="header__menu-link" href="/" title="Профиль" aria-label="Профиль">
               <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.5 9C12.9853 9 15 6.98528 15 4.5C15 2.01472 12.9853 0 10.5 0C8.01472 0 6 2.01472 6 4.5C6 6.98528 8.01472 9 10.5 9Z" fill="white"/>
                 <path d="M0.0165859 16.6118C-0.113065 17.3412 0.535191 18 1.33903 18H18.6604C19.4902 18 20.1125 17.3412 19.9829 16.6118C19.2309 12.4 15.0561 10 9.99973 10C4.94333 10 0.768563 12.4 0.0165859 16.6118Z" fill="white"/>
@@ -134,7 +134,7 @@
           советуют нас родным и близким.</span>
         </p>
         <button
-          class="main__button button main__button--before"
+          class="main__button main__button--before"
           type="button"
           value="read-more"
         >
